# general-study

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: test_on_push.yaml  wake_streamlit.yaml
data/: ahp_payload_example.json
github_actions/: wake_streamlit.py
src/scripts/: app.py  run_ahp_pipeline.py
src/scripts/ahp_topsis/: __init__.py  ahp.py  constants.py  default_payload.py  recommend.py  topsis.py  weights.py
src/scripts/monte_carlo_sim/: __init__.py  config.py  utils.py
src/scripts/monte_carlo_sim/processes/: expenses.py  income.py  returns.py
src/scripts/monte_carlo_sim/simulation/: monte_carlo.py  wealth_path.py
src/scripts/pages/: dashboard.py  investment_criterias.py
src/scripts/results/: _init_.py  ahp.py  charts.py  constants.py  monte_carlo.py  page.py  ui.py
src/scripts/savings_profile/: constants.py  inputs.py  page.py  validation.py
src/scripts/survey/: builder.py  constants.py  matrix_widget.py  page.py  tooltip.py
