[project]
name = "general-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.1.0",
    "ibm-watson-machine-learning>=1.0.368",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=2.1.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-dependency>=0.6.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=0.23",
    "seaborn>=0.13.2",
    "streamlit>=1.54.0",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
