[project]
name = "general-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.1.0",
    "detect-secrets>=1.5.0",
    "flake8>=7.3.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy==1.26.4",
    "pandas==2.1.4",
    "plotly>=6.6.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-dependency>=0.6.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=0.23",
    "seaborn>=0.13.2",
    "streamlit>=1.54.0",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
